feat: set otel docker image with local config

--- a/otel-local/Dockerfile
+++ b/otel-local/Dockerfile
@@ -1,1 +1,5 @@
 FROM otel/opentelemetry-collector:latest
+
+COPY otel-config-local.yaml /etc/otelcol/otel-config-local.yaml
+
+CMD ["--config" "/etc/otelcol/otel-config-local.yaml"]
