--- a/otel-local/docker-compose.yml
+++ b/otel-local/docker-compose.yml
@@ -3,3 +3,9 @@ services:
     build: ../app/
     ports:
       - "80:80"
+    environment:
+      - OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "localhost:4317"
+  otel:
+    build: .
+    ports:
+      - "4317:4317"
