--- a/otel-local/docker-compose.yml
+++ b/otel-local/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "80:80"
     environment:
-      - OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "localhost:4317"
+      OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "localhost:4317"
   otel:
     build: .
     ports:
