--- a/otel-local/docker-compose.yml
+++ b/otel-local/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "80:80"
     environment:
       OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "http://localhost:4317"
+      OTEL_EXPORTER_OTLP_METRICS_PROTOCOL: "grpc"
   otel:
     build: .
     command: ["--config=/etc/otelcol/otel-config-local.yaml"]
