feat: include container names

--- a/otel-local/docker-compose.yml
+++ b/otel-local/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   app:
     build: ../app/
+    container_name: app
     depends_on:
       - otel
     ports:
@@ -10,6 +11,7 @@ services:
       OTEL_EXPORTER_OTLP_METRICS_PROTOCOL: "grpc"
   otel:
     build: .
+    container_name: otel
     command: ["--config=/etc/otelcol/otel-config-local.yaml"]
     ports:
       - "4317:4317"
