--- a/otel-local/docker-compose.yml
+++ b/otel-local/docker-compose.yml
@@ -12,11 +12,12 @@ services:
     ports:
       - "80:80"
     environment:
-      OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "http://otel:4317"
-      OTEL_EXPORTER_OTLP_METRICS_PROTOCOL: "grpc"
+      OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel:4318"
+      OTEL_EXPORTER_OTLP_METRICS_PROTOCOL: "http/protobuf"
   otel:
     build: .
     container_name: otel
     command: ["--config=/etc/otelcol/otel-config-local.yaml"]
     ports:
       - "4317"
+      - "4318:4318"
