--- a/otel-local/docker-compose.yml
+++ b/otel-local/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     environment:
       OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel:4318"
       OTEL_EXPORTER_OTLP_METRICS_PROTOCOL: "http/protobuf"
+    networks:
+      - default
   otel:
     build: .
     container_name: otel
@@ -23,3 +25,5 @@ services:
     ports:
       - "4317"
       - "4318:4318"
+    networks:
+      - default
