--- a/otel-local/otel-config-local.yaml
+++ b/otel-local/otel-config-local.yaml
@@ -2,26 +2,20 @@ receivers:
   otlp:
     protocols:
       grpc:
-        endpoint: "0.0.0.0:4317"
+        endpoint: 0.0.0.0:4317
       http:
-        endpoint: "0.0.0.0:4318"
-
-processors:
-  batch:
-  memory_limiter:
-    # 75% of maximum memory up to 2G
-    limit_mib: 1536
-    # 25% of limit up to 2G
-    spike_limit_mib: 512
-    check_interval: 5s
-
+        endpoint: 0.0.0.0:4318
 exporters:
   debug:
     verbosity: detailed
-
 service:
   pipelines:
+    traces:
+      receivers: [otlp]
+      exporters: [debug]
     metrics:
       receivers: [otlp]
-      processors: [memory_limiter, batch]
+      exporters: [debug]
+    logs:
+      receivers: [otlp]
       exporters: [debug]
