--- a/otel-local/docker-compose.yml
+++ b/otel-local/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "http://otel:4317"
       OTEL_EXPORTER_OTLP_METRICS_PROTOCOL: "grpc"
     networks:
-      - default
+      - otel-demo
   otel:
     build: .
     command: ["--config=/etc/otelcol/otel-config-local.yaml"]
@@ -24,4 +24,4 @@ services:
       - "4317:4317"
       - "4318:4318"
     networks:
-      - default
+      - otel-demo
