--- a/otel-local/docker-compose.yml
+++ b/otel-local/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3'
 
 networks:
-  default:
-    name: opentelemetry-demo
+  otel-demo:
     driver: bridge
 
 services:
@@ -13,7 +12,7 @@ services:
     ports:
       - "80:80"
     environment:
-      OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "http://otel:4317"
+      OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "http://localhost:4317"
       OTEL_EXPORTER_OTLP_METRICS_PROTOCOL: "grpc"
     networks:
       - otel-demo
