feat: include thanos exporter

--- a/aws-resources/otel/otel-config-aws.yaml
+++ b/aws-resources/otel/otel-config-aws.yaml
@@ -8,6 +8,11 @@ receivers:
 exporters:
   debug:
     verbosity: detailed
+  prometheus/thanos:
+    endpoint: "localhost:10908/api/v1/receive"
+    namespace: test-app
+    resource_to_telemetry_conversion:
+      enabled: true
 service:
   pipelines:
     traces:
@@ -15,7 +20,7 @@ service:
       exporters: [debug]
     metrics:
       receivers: [otlp]
-      exporters: [debug]
+      exporters: [debug, prometheus/thanos]
     logs:
       receivers: [otlp]
       exporters: [debug]
